Home page how iframe

--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Minimal Clock</title>
+    <title>Home API</title>
+    <link rel="stylesheet" href="./normalize.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="body">
-    <div class="clock">
-      <span class="clock__hour" id="hour"></span>
-      <span class="clock__min" id="min"></span>
-
-      <div class="clock__days" id="days">
-        <span>SUN</span>
-        <span>MON</span>
-        <span>TUE</span>
-        <span>WED</span>
-        <span>THU</span>
-        <span>FRI</span>
-        <span>SAT</span>
-      </div>
-      <span class="clock__present">PRESENT</span>
-      <span class="clock__seconds-indicator" id="seconds-indicator"></span>
-    </div>
-    <span class="full-date" id="full-date"> </span>
-    <script src="main.js"></script>
+    <iframe
+      src="https://harmandohernandez.github.io/minimal-clock/"
+      class="iframe__main"
+    ></iframe>
   </body>
 </html>
